--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "description": "",
   "dependencies": {
     "bluebird": "^3.4.7",
+    "body-parser": "^1.17.0",
     "chalk": "^1.1.3",
     "express": "^4.14.1",
     "moment": "^2.17.1"
