--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "body-parser": "^1.17.0",
     "chalk": "^1.1.3",
     "express": "^4.14.1",
-    "moment": "^2.17.1"
+    "moment": "^2.17.1",
+    "sequelize": "^3.30.2",
+    "sqlite3": "^3.1.8"
   }
 }
