--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "kurisubrooks",
   "license": "ISC",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "sudo node index"
   },
   "description": "",
   "dependencies": {
@@ -15,6 +15,7 @@
     "express": "^4.14.1",
     "moment": "^2.17.1",
     "sequelize": "^3.30.2",
-    "sqlite3": "^3.1.8"
+    "sqlite3": "^3.1.8",
+    "yargs": "^7.0.1"
   }
 }
