--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.17.0",
     "chalk": "^1.1.3",
     "express": "^4.14.1",
+    "express-handlebars": "^3.0.0",
     "moment": "^2.17.1",
     "sequelize": "^3.30.2",
     "sqlite3": "^3.1.8",
