--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.14.1",
     "express-handlebars": "^3.0.0",
     "moment": "^2.17.1",
+    "request-promise": "^4.1.1",
     "sequelize": "^3.30.2",
     "sqlite3": "^3.1.8",
     "yargs": "^7.0.1"
