--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "bluebird": "^3.4.7",
     "body-parser": "^1.17.0",
     "chalk": "^1.1.3",
+    "ejs": "^2.5.6",
     "express": "^4.14.1",
-    "express-handlebars": "^3.0.0",
     "moment": "^2.17.1",
     "request-promise": "^4.1.1",
     "sequelize": "^3.30.2",
     "sqlite3": "^3.1.8",
     "yargs": "^7.0.1"
+  },
+  "engines": {
+    "node": ">=7.6.0"
   }
 }
