--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "bluebird": "^3.4.7",
     "body-parser": "^1.17.0",
     "chalk": "^1.1.3",
+    "cookie-parser": "^1.4.3",
     "ejs": "^2.5.6",
     "express": "^4.14.1",
+    "express-session": "^1.15.1",
     "moment": "^2.17.1",
     "request-promise": "^4.1.1",
     "sequelize": "^3.30.2",
