--- a/package.json
+++ b/package.json
@@ -13,16 +13,19 @@
     "bcrypt": "^1.0.2",
     "bluebird": "^3.4.7",
     "body-parser": "^1.17.0",
+    "canvas": "github:automattic/node-canvas",
     "chalk": "^1.1.3",
     "cookie-parser": "^1.4.3",
     "ejs": "^2.5.6",
     "express": "^4.14.1",
     "express-session": "^1.15.1",
+    "gifencoder": "^1.0.6",
     "moment": "^2.17.1",
     "request-promise": "^4.1.1",
     "sequelize": "^3.30.2",
     "sqlite3": "^3.1.8",
     "to-markdown": "^3.0.3",
+    "validator": "^7.0.0",
     "yargs": "^7.0.1"
   },
   "engines": {
