--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.17.0",
     "canvas": "github:automattic/node-canvas",
     "chalk": "^1.1.3",
+    "cheerio": "^0.22.0",
     "cookie-parser": "^1.4.3",
     "ejs": "^2.5.6",
     "express": "^4.14.1",
