Minor Tweaks to ESLint

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,7 +13,7 @@
         "block-spacing": "error",
         "brace-style": [ "error", "1tbs", { "allowSingleLine": true } ],
         "callback-return": "error",
-        "camelcase": 0,
+        "camelcase": "warn",
         "comma-dangle": "error",
         "comma-spacing": "error",
         "comma-style": "error",
@@ -47,10 +47,10 @@
         "max-nested-callbacks": [ "error", { "max": 4 } ],
         "max-statements-per-line": [ "error", { "max": 2 } ],
         "new-cap": "error",
-        "newline-per-chained-call": [ "error", { "ignoreChainWithDepth": 3 } ],
+        "newline-per-chained-call": [ 0, { "ignoreChainWithDepth": 3 } ],
         "no-array-constructor": "error",
         "no-bitwise": "warn",
-        "no-console": 0,
+        "no-console": "warn",
         "no-duplicate-imports": "error",
         "no-empty-function": "error",
         "no-extra-parens": [ "warn", "all", { "nestedBinaryExpressions": false } ],
