--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.14.1",
     "express-session": "^1.15.1",
     "gifencoder": "^1.0.6",
+    "glob": "^7.1.1",
     "moment": "^2.17.1",
     "request-promise": "^4.1.1",
     "sequelize": "^3.30.2",
