--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "express-session": "^1.15.1",
     "gifencoder": "^1.0.6",
     "glob": "^7.1.1",
-    "moment": "^2.17.1",
+    "moment-timezone": "^0.5.13",
     "request-promise": "^4.1.1",
     "sequelize": "^3.30.2",
     "sqlite3": "^3.1.8",
