Add Greenway to Weather Locations, Fix Verifier Skipping Empty Condition Strings

--- a/keychain.json.example
+++ b/keychain.json.example
@@ -2,6 +2,7 @@
     "session": "",
     "wunderground": {
         "penrith": " ",
-        "lithgow": " "
+        "lithgow": " ",
+        "greenway": " "
     }
 }
