Fix Fixer errors

--- a/keychain.json.example
+++ b/keychain.json.example
@@ -1,5 +1,6 @@
 {
-    "session": "",
+    "session": " ",
+    "fixer": " ",
     "wunderground": {
         "penrith": " ",
         "lithgow": " ",
