Convert to DarkSky
Wunderground's API was deprecated and shutdown so I switched the data source to DarkSky

--- a/keychain.json.example
+++ b/keychain.json.example
@@ -1,9 +1,5 @@
 {
-    "session": " ",
-    "fixer": " ",
-    "wunderground": {
-        "penrith": " ",
-        "lithgow": " ",
-        "greenway": " "
-    }
+    "session": " ",
+    "darksky": " ",
+    "fixer": " "
 }
