--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sherlock",
-  "version": "2.0.0",
+  "version": "3.0.0",
   "author": "kurisubrooks",
   "description": "http server with modular data retrieval and functional api endpoints",
   "main": "index.js",
@@ -9,25 +9,26 @@
   },
   "dependencies": {
     "@turf/turf": "^5.1.6",
-    "bcrypt": "^3.0.1",
-    "bluebird": "^3.4.7",
-    "body-parser": "^1.17.0",
+    "bcrypt": "^3.0.6",
+    "bluebird": "^3.7.0",
+    "body-parser": "^1.19.0",
     "canvas": "github:automattic/node-canvas",
-    "chalk": "^2.4.1",
+    "chalk": "^2.4.2",
     "cheerio": "^0.22.0",
-    "cookie-parser": "^1.4.3",
-    "ejs": "^2.5.6",
-    "express": "^4.14.1",
-    "express-session": "^1.15.1",
+    "cookie-parser": "^1.4.4",
+    "ejs": "^2.7.1",
+    "express": "^4.17.1",
+    "express-session": "^1.16.2",
     "gifencoder": "^1.0.6",
-    "glob": "^7.1.1",
-    "moment-timezone": "^0.5.13",
-    "request-promise": "^4.1.1",
-    "sequelize": "^4.39.1",
-    "sqlite3": "^4.0.2",
+    "glob": "^7.1.4",
+    "moment-timezone": "^0.5.26",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.4",
+    "sequelize": "^5.19.2",
+    "sqlite3": "^4.1.0",
     "to-markdown": "^3.0.3",
-    "validator": "^10.8.0",
-    "yargs": "^12.0.2"
+    "validator": "^10.11.0",
+    "yargs": "^12.0.5"
   },
   "engines": {
     "node": ">=7.6.0"
