--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,7 @@
 {
-    "parserOptions": { "ecmaVersion": 2017 },
+    "parserOptions": {
+        "ecmaVersion": 2017
+    },
     "env": {
         "es6": true,
         "node": true
@@ -11,60 +13,83 @@
         "array-callback-return": "error",
         "arrow-spacing": "error",
         "block-spacing": "error",
-        "brace-style": [ "error", "1tbs", { "allowSingleLine": true } ],
+        "brace-style": ["error", "1tbs", {
+            "allowSingleLine": true
+        }],
         "callback-return": "error",
         "camelcase": 0,
         "comma-dangle": "error",
         "comma-spacing": "error",
         "comma-style": "error",
-        "complexity": "warn",
+        "complexity": 0,
         "computed-property-spacing": "error",
         "consistent-return": "error",
         "consistent-this": "error",
-        "curly": [ "error", "multi-line", "consistent" ],
-        "dot-location": [ "error", "property" ],
+        "curly": ["error", "multi-line", "consistent"],
+        "dot-location": ["error", "property"],
         "dot-notation": "error",
         "eol-last": "error",
         "eqeqeq": "error",
         "func-names": "error",
-        "func-style": [ "error", "declaration", { "allowArrowFunctions": true } ],
+        "func-style": ["error", "declaration", {
+            "allowArrowFunctions": true
+        }],
         "handle-callback-err": "error",
-        "id-length": [ "error", { "exceptions": [ "$", "_", "a", "b" ] } ],
-        "indent": [ "error", 4, { "SwitchCase": 1 } ],
+        "id-length": 0,
+        "indent": ["error", 2, {
+            "SwitchCase": 1
+        }],
         "key-spacing": "error",
-        "keyword-spacing": [ "error",
+        "keyword-spacing": ["error",
             {
                 "overrides": {
-                    "if": { "after": true },
-                    "for": { "after": true },
-                    "while": { "after": false },
-                    "catch": { "after": false },
-                    "switch": { "after": false }
+                    "if": {
+                        "after": true
+                    },
+                    "for": {
+                        "after": true
+                    },
+                    "while": {
+                        "after": false
+                    },
+                    "catch": {
+                        "after": false
+                    },
+                    "switch": {
+                        "after": false
+                    }
                 }
             }
         ],
         "max-depth": "error",
-        "max-nested-callbacks": [ "error", { "max": 4 } ],
-        "max-statements-per-line": [ "error", { "max": 2 } ],
+        "max-nested-callbacks": ["error", {
+            "max": 4
+        }],
+        "max-statements-per-line": ["error", {
+            "max": 2
+        }],
         "new-cap": "error",
-        "newline-per-chained-call": [ 0, { "ignoreChainWithDepth": 3 } ],
+        "newline-per-chained-call": ["error", {
+            "ignoreChainWithDepth": 3
+        }],
         "no-array-constructor": "error",
-        "no-bitwise": "warn",
-        "no-console": "warn",
+        "no-console": 0,
         "no-duplicate-imports": "error",
         "no-empty-function": "error",
-        "no-extra-parens": [ "warn", "all", { "nestedBinaryExpressions": false } ],
+        "no-extra-parens": ["warn", "all", {
+            "nestedBinaryExpressions": false
+        }],
         "no-floating-decimal": "error",
         "no-implied-eval": "error",
-        "no-inline-comments": "error",
+        "no-inline-comments": 0,
         "no-invalid-this": "error",
         "no-label-var": "error",
         "no-lone-blocks": "error",
         "no-lonely-if": "error",
-        "no-mixed-operators": "error",
+        "no-mixed-operators": 0,
         "no-mixed-requires": "error",
         "no-multi-spaces": "error",
-        "no-multiple-empty-lines": [ "error",
+        "no-multiple-empty-lines": ["error",
             {
                 "max": 2,
                 "maxEOF": 1,
@@ -99,16 +124,15 @@
         "no-warning-comments": "warn",
         "no-whitespace-before-property": "error",
         "object-curly-newline": "error",
-        "object-curly-spacing": [ "error", "always" ],
+        "object-curly-spacing": ["error", "always"],
         "operator-assignment": "error",
-        "operator-linebreak": [ "error", "before" ],
-        "padded-blocks": [ "error", "never" ],
+        "operator-linebreak": ["error", "before"],
+        "padded-blocks": ["error", "never"],
         "prefer-arrow-callback": "error",
-        "prefer-const": "error",
         "prefer-rest-params": "error",
         "prefer-spread": "error",
         "prefer-template": "error",
-        "quotes": [ "error", "double",
+        "quotes": ["error", "single",
             {
                 "avoidEscape": true,
                 "allowTemplateLiterals": true
@@ -118,7 +142,7 @@
         "semi": "error",
         "semi-spacing": "error",
         "space-before-blocks": "error",
-        "space-before-function-paren": [ "error", "never" ],
+        "space-before-function-paren": ["error", "never"],
         "space-in-parens": "error",
         "space-infix-ops": "error",
         "space-unary-ops": "error",
