--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "chalk": "^2.4.2",
     "cheerio": "^0.22.0",
     "cookie-parser": "^1.4.4",
+    "cors": "^2.8.5",
     "ejs": "^2.7.1",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
+    "gif-encoder-2": "^1.0.5",
     "gifencoder": "^1.0.6",
     "glob": "^7.1.4",
     "moment-timezone": "^0.5.26",
