--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "bcrypt": "^5.0.0",
     "bluebird": "^3.7.0",
     "body-parser": "^1.19.0",
-    "canvas": "github:automattic/node-canvas",
+    "canvas": "^2.9.3",
     "chalk": "^2.4.2",
     "cheerio": "^0.22.0",
     "cookie-parser": "^1.4.4",
